@@ -56,7 +56,7 @@ namespace MeGUI
             System.Windows.Forms.Label label5;
             System.ComponentModel.ComponentResourceManager resources = new System.ComponentModel.ComponentResourceManager(typeof(AviSynthWindow));
             this.resNCropGroupbox = new System.Windows.Forms.GroupBox();
-            this.txtAspectError = new System.Windows.Forms.TextBox();
+            this.label9 = new System.Windows.Forms.Label();
             this.suggestMod = new System.Windows.Forms.ComboBox();
             this.chAutoPreview = new System.Windows.Forms.CheckBox();
             this.resize = new System.Windows.Forms.CheckBox();
@@ -130,12 +130,12 @@ namespace MeGUI
             this.onSaveLoadScript = new System.Windows.Forms.CheckBox();
             this.saveButton = new System.Windows.Forms.Button();
             this.previewAvsButton = new System.Windows.Forms.Button();
-            this.label9 = new System.Windows.Forms.Label();
             this.helpButton1 = new MeGUI.core.gui.HelpButton();
             this.videoOutput = new MeGUI.FileBar();
             this.input = new MeGUI.FileBar();
             this.avsProfile = new MeGUI.core.gui.ConfigableProfilesControl();
             this.arChooser = new MeGUI.core.gui.ARChooser();
+            this.lblAspectError = new System.Windows.Forms.Label();
             label2 = new System.Windows.Forms.Label();
             label3 = new System.Windows.Forms.Label();
             label4 = new System.Windows.Forms.Label();
@@ -209,8 +209,8 @@ namespace MeGUI
             // 
             this.resNCropGroupbox.Anchor = ((System.Windows.Forms.AnchorStyles)(((System.Windows.Forms.AnchorStyles.Top | System.Windows.Forms.AnchorStyles.Left) 
             | System.Windows.Forms.AnchorStyles.Right)));
+            this.resNCropGroupbox.Controls.Add(this.lblAspectError);
             this.resNCropGroupbox.Controls.Add(this.label9);
-            this.resNCropGroupbox.Controls.Add(this.txtAspectError);
             this.resNCropGroupbox.Controls.Add(this.suggestMod);
             this.resNCropGroupbox.Controls.Add(this.chAutoPreview);
             this.resNCropGroupbox.Controls.Add(this.resize);
@@ -231,14 +231,14 @@ namespace MeGUI
             this.resNCropGroupbox.TabStop = false;
             this.resNCropGroupbox.Text = "Crop && Resize";
             // 
-            // txtAspectError
+            // label9
             // 
-            this.txtAspectError.Enabled = false;
-            this.txtAspectError.Location = new System.Drawing.Point(340, 123);
-            this.txtAspectError.Name = "txtAspectError";
-            this.txtAspectError.Size = new System.Drawing.Size(75, 21);
-            this.txtAspectError.TabIndex = 12;
-            this.txtAspectError.TextAlign = System.Windows.Forms.HorizontalAlignment.Center;
+            this.label9.AutoSize = true;
+            this.label9.Location = new System.Drawing.Point(236, 126);
+            this.label9.Name = "label9";
+            this.label9.Size = new System.Drawing.Size(95, 13);
+            this.label9.TabIndex = 13;
+            this.label9.Text = "Aspect Ratio Error";
             // 
             // suggestMod
             // 
@@ -1124,15 +1124,6 @@ namespace MeGUI
             this.previewAvsButton.Text = "Preview AVS Script";
             this.previewAvsButton.Click += new System.EventHandler(this.previewButton_Click);
             // 
-            // label9
-            // 
-            this.label9.AutoSize = true;
-            this.label9.Location = new System.Drawing.Point(236, 126);
-            this.label9.Name = "label9";
-            this.label9.Size = new System.Drawing.Size(95, 13);
-            this.label9.TabIndex = 13;
-            this.label9.Text = "Aspect Ratio Error";
-            // 
             // helpButton1
             // 
             this.helpButton1.Anchor = ((System.Windows.Forms.AnchorStyles)((System.Windows.Forms.AnchorStyles.Bottom | System.Windows.Forms.AnchorStyles.Left)));
@@ -1201,6 +1192,16 @@ namespace MeGUI
             this.arChooser.Size = new System.Drawing.Size(214, 29);
             this.arChooser.TabIndex = 21;
             this.arChooser.SelectionChanged += new MeGUI.StringChanged(this.arChooser_SelectionChanged);
+            // 
+            // lblAspectError
+            // 
+            this.lblAspectError.BorderStyle = System.Windows.Forms.BorderStyle.FixedSingle;
+            this.lblAspectError.Location = new System.Drawing.Point(340, 122);
+            this.lblAspectError.Name = "lblAspectError";
+            this.lblAspectError.Size = new System.Drawing.Size(75, 21);
+            this.lblAspectError.TabIndex = 14;
+            this.lblAspectError.Text = "0.00000%";
+            this.lblAspectError.TextAlign = System.Drawing.ContentAlignment.MiddleCenter;
             // 
             // AviSynthWindow
             // 
@@ -1339,7 +1340,7 @@ namespace MeGUI
         private ComboBox cbCharset;
         private CheckBox nvResize;
         private ComboBox suggestMod;
-        private TextBox txtAspectError;
         private Label label9;
+        private Label lblAspectError;
     }
 }
